several fixes for spacing of control bars

--- a/blocks/melody/ff_container/ff_container-control-bar/ff_container-control-bar.less
+++ b/blocks/melody/ff_container/ff_container-control-bar/ff_container-control-bar.less
@@ -18,4 +18,12 @@
 .ff_container-control-bar__group {
     display: flex;
     align-items: center;
+    
+    >*+* {
+        margin-left: @ff_size_control_horizontal;
+    }
+    
+    >* {
+        float: left; //backup for no flexbox
+    }
 }
